tests/snapshots/test_runner__tests__compiler__typecheck__explicit_type_variable_4__explicit_type_variable_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let<A, B> foo (a: A) : B = a

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/explicit_type_variable_4/explicit_type_variable_4.kk:1:28
  │
1 │ let<A, B> foo (a: A) : B = a
  │                            ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - B           | + A         |
    +---------------+-------------+
